--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,6 +38,8 @@ target 'SimpleWeather' do
 
 
 
+  pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
+
   target 'SimpleWeatherTests' do
     inherit! :search_paths
     # Pods for testing
